--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ nav {
 }
 
 .geometry-components {
-    width: 75%;
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
@@ -88,7 +88,7 @@ img {
     border-radius: 4px;
     border: none;
     padding: 8px;
-    width: 65px;
+    width: 45px;
     margin-bottom: 50px;
 
 }
@@ -111,7 +111,7 @@ img {
 .geometry-calculation {
     border: 1px solid rgba(17, 17, 17, 0.1);
     border-radius: 8px;
-    width: 20%;
+    width: 30%;
     text-align: center;
     padding: 10px;
 
@@ -131,7 +131,9 @@ img {
 }
 .td-styles{
     margin-bottom: 25px;
-    padding-left: 10px;
+    padding-left: 15px;
+    padding-top: 10px;
+    
 }
 
 
